--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -136,7 +136,7 @@ background: rgb(224, 8, 8);
 #search {
 height: 60px;
 width: 290px;
-position: absolute;
+position: fixed;
 bottom: 0;
 left: 36.25%;
 }
