--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -59,7 +59,7 @@
       </table>
 </div>
  <div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo>
-  <a class="w3-bar-item w3-button w3-padding-large"  (click) = "navigateChat()"> CHAT <span class="w3-badge w3-right w3-small w3-red" id = "numofmessage">new</span></a>
+  <a class="w3-bar-item w3-button w3-padding-large"  (click) = "navigateChat()"> CHAT <span class="w3-badge w3-right w3-small w3-red" id = "numofmessage-1">new</span></a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "logout()" >LOG OUT</a>
   <a class="w3-bar-item w3-button w3-padding-large" (click) = "scrollTo('schedule')">SCHEDULE</a>
 </div>
